# teaching-aids

./: Dockerfile  Pipfile  main.py  mcq.py  prompts.py  pyproject.toml  requirements.txt
pages/: MCQs_and_Summaries.py  👩🏿‍⚕️_Learn_from_PDFs.py
