[tool.poetry]
name = "teaching-aids"
version = "0.1.0"
description = "teaching assistance"
authors = ["DrDavidL <92898146+DrDavidL@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
langchain = "^0.1.6"
pymupdf = "^1.23.21"
openai = "^1.12.0"
tiktoken = "^0.6.0"
faiss-cpu = "^1.7.4"
langchain-community = "^0.0.19"
fpdf = "^1.7.2"
pytz = "^2024.1"
audio-recorder-streamlit = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
